--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500;600&family=Sofia+Sans+Extra+Condensed:wght@600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500;600&family=Sofia+Sans+Extra+Condensed:wght@600&family=Source+Sans+Pro&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
 
 *,*::before,*::after{
     box-sizing: border-box;
@@ -7,22 +8,67 @@
 
 body{
     margin: 0;
-    background-color: blanchedalmond;
+    background-color: #f5f1e5;
 } 
  
 h1, p {
     margin: 0;
 }
+ 
+.header{
+    width: 100%;
+    height: 40px;
+    background-color: red;
+}
+
+.header_wrapper {
+    display: flex;
+    width: 1100px;
+    height: 40px;
+    margin: 0 auto;
+    justify-content: end;
+}
+
+.navigator{
+   display: flex;
+   width: 500px;
+   column-gap: 15px;
+   height: 40px;
+   align-items: center;
+   justify-content: end;
+}
+
+.nav_link {
+    color: white;
+    font-weight: 700;
+    line-height: 23px;
+    letter-spacing: 0.06em;
+    font-size: 16.5px;
+    font-family: 'Raleway', sans-serif;
+}
+
+.i {
+    color: white;
+    font-weight: 700;
+    line-height: 23px;
+    letter-spacing: 0.06em;
+    font-size: 16.5px;
+    font-family: 'Raleway', sans-serif;
+}
 
 .document {
-    width: 940px;
-    height: 276px;
     background-color: white;
+    width: 1100px;
+    height: 276px;
     margin: 50px auto;  
     padding-top: 40px;
     text-align: center;
     margin-bottom: 10px;
     border:1px solid black;
+}
+
+.image-bicat{
+    width: 1100px;
 }
 
 .text1 {
@@ -37,8 +83,61 @@ h1, p {
 }
 
 .cat {
-    width: 940px;
+    width: 1100px;
     margin: 0 auto;
 }
 
+.cat1 {
+    width: 353px;
+    height: 198px;
+    margin-right: 16.5px;
+}
 
+.cat1:last-child {
+    margin-right: 0;   
+}
+
+.cat_block {
+    width: 1100px;
+    height: 900px;
+    margin: 50px auto;
+}
+
+.ad {
+    margin-bottom: 40px;
+    color: red;
+    font-family: 'Raleway', sans-serif;
+}
+
+.imagecat {
+    margin-bottom: 20px;
+}
+.text-1 {
+    line-height: 23px;
+    letter-spacing: 0.06em;
+    font-size: 16.5px;
+    font-family: 'Raleway', sans-serif;
+}
+.list {
+    line-height: 23px;
+    letter-spacing: 0.06em;
+    font-size: 16.5px;  
+    font-family: 'Raleway', sans-serif;
+}
+
+.button_clock {
+    width: 100px;
+    height: 30px;
+    background-color: red;
+    color: white;
+    border-radius: 5px;
+    border-color: red;
+    margin-top: 30px;
+    cursor: pointer;
+    transition: 1s;
+    font-family: 'Raleway', sans-serif;
+}  
+
+.button_clock:hover {
+    scale: 1.1;
+}
